# electrical-trigeminal-stimulation

./: .gitignore  README.md
Ansys/: room.iges
Ansys/Smoke_in_room_files/dp0/: designPoint.wbdp
Ansys/Smoke_in_room_files/session_files/: journal1.wbjn  journal10.wbjn  journal11.wbjn  journal12.wbjn  journal8.wbjn
Ansys/Smoke_in_room_files/user_files/: export_command.txt
ETS Test Environment Vol. 0.5/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  ETS Test Environment Vol. 0.5.sln  MovementMovementLog_Jingxuan_dis_1.txt  Pixyz.PluginUnity.Editor.csproj  Pixyz.PluginUnity.csproj  README.md  SteamVR.csproj  SteamVR_Actions.csproj  SteamVR_Editor.csproj  SteamVR_Input_Editor.csproj  SteamVR_Windows_EditorHelper.csproj  py_plugin_test.py  unityProject.vrmanifest
ETS Test Environment Vol. 0.5/Assets/: UpsampledPointCloud.cs  settings.cs
ETS Test Environment Vol. 0.5/Assets/Editor/: FenceGenTrackersEditor.cs
ETS Test Environment Vol. 0.5/Assets/Materials/: Player Material.mat
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/: CMakeLists.txt  Download Samples.url
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Binaries/native/3DH3P/: ACCAMERA_19.12_14.tx  ATEXT_19.12_14.tx  AcIdViewObj_19.12_14.tx  AcMPolygonObj15_19.12_14.tx  ISM_19.12_14.tx  ModelerGeometry_19.12_14.tx  RText_19.12_14.tx  RasterProcessor_19.12_14.tx  SCENEOE_19.12_14.tx  TB_Analytical_19.12_14.tx  TB_Base_19.12_14.tx  TB_ExLabelUtils_19.12_14.tx  TB_Family_19.12_14.tx  TB_Format2011Classes_19.12_14.tx  TB_Format2013Classes_19.12_14.tx  TB_Format2016Classes_19.12_14.tx  TB_Format2018Classes_19.12_14.tx  TB_Format2019Classes_19.12_14.tx  TB_Geometry_19.12_14.tx  TB_HostObj_19.12_14.tx  TB_LoaderBase_19.12_14.tx  TB_Loader_19.12_14.tx  TB_MEP_19.12_14.tx  TB_ModelerGeometry_19.12_14.tx  TD_DbIO_19.12_14.tx  WipeOut_19.12_14.tx
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Binaries/native/PsSchema/: sch_110_0.sch_txt  sch_12006.sch_txt  sch_120_0.sch_txt  sch_12102.sch_txt  sch_12103.sch_txt  sch_130_0.sch_txt  sch_16002.sch_txt  sch_16003.sch_txt  sch_16004.sch_txt  sch_17104.sch_txt  sch_17106.sch_txt  sch_18007.sch_txt  sch_18106.sch_txt  sch_19002.sch_txt  sch_19008.sch_txt  sch_20000.sch_txt  sch_200_1009.sch_txt  sch_25000.sch_txt  sch_25001.sch_txt  sch_26102.sch_txt  sch_26104.sch_txt  sch_26105.sch_txt  sch_28002.sch_txt  sch_28101.sch_txt  sch_3000.sch_txt  sch_30000.sch_txt  sch_31001.sch_txt  sch_4011.sch_txt  sch_4030.sch_txt  sch_4032.sch_txt  sch_5015.sch_txt  sch_5025.sch_txt  sch_5030.sch_txt  sch_5031.sch_txt  sch_5032.sch_txt  sch_5033.sch_txt  sch_5041.sch_txt  sch_5049.sch_txt  sch_5050.sch_txt  sch_5053.sch_txt  (+13 more)
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Binaries/native/fonts/: SSS2.font  SYM1.font
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Editor/: Pixyz.PluginUnity.Editor.asmdef
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Editor/Import/: ImportSettingsEditor.cs  LODsSettingsDrawer.cs  PreprocessVRED.cs
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Editor/Menus/: AboutWindow.cs
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Editor/Style/: ColoredTheme.cs  EditorResources.cs  StaticStyles.cs
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Editor/Tools/: FieldInstanceDrawer.cs  Toolbox.cs  ToolsEditor.cs
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Editor/Utils/: PiXYZDefinesManager.cs  PostProcessor.cs
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Runtime/: Pixyz.PluginUnity.asmdef
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Runtime/Extensions/: BaseExtensions.cs  ContextualExtensions.cs  MeshExtensions.cs
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Runtime/Import/: ImportSettingsTemplate.cs  ImportStamp.cs  Metadata.cs  TransformVariant.cs  VerticesData.cs
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Runtime/Interface/: CoreContext.cs  MeshDefinitionToMesh.cs  SceneExtensions.cs
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Runtime/Resources/: Thick Lines.shader
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Runtime/Tools/: Actions.cs  FieldInstance.cs  FieldInstanceSerializer.cs  FreePassAction.cs  Rule.cs  RuleBlock.cs  ToolsBase.cs
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Runtime/Tools/BaseActions/: AddRigidbody.cs  CreateLightmapUVs.cs  ExplodeSubmeshes.cs  FilterOnLayer.cs  FilterOnMaterial.cs  FilterOnMetadata.cs  FilterOnPosition.cs  FilterOnTag.cs  FlipNormals.cs  GetChildAt.cs  GetGameObject.cs  GetImportedModel.cs  GetLatestImportedModel.cs  MoveOrigin.cs  PrintMaterialsInfo.cs  RepairMesh.cs  ReplaceBy.cs  SetMaterial.cs  SetMesh.cs  SetMetadata.cs  SetName.cs  SetTag.cs  SwitchMaterials.cs
ETS Test Environment Vol. 0.5/Assets/Plugins/Pixyz/Runtime/Utils/: Dispatcher.cs  Enums.cs  GenericRenderer.cs  ProxyOcclusionCuller.cs  ThreadQueue.cs
ETS Test Environment Vol. 0.5/Assets/Scenes/: Collider_test_nonVR.unity  ETS Enviroment.unity  Menu.unity
ETS Test Environment Vol. 0.5/Assets/Scripts/: FenceGenTrackers.cs  PlayerMovement.cs  py_cs_test.cs
ETS Test Environment Vol. 0.5/Assets/SteamVR_Input/: SteamVR_Input_Actions.cs
ETS Test Environment Vol. 0.5/Assets/test_codes/: CalibrationMenu.cs  MenuFunction.cs  Python_Server (standby).py  Unity_Client.cs  Unity_Client_2.cs
ETS Test Environment Vol. 0.5/Movement/20200218/: Jingxuan1_ETSoff.txt  Jingxuan3_ETSoff.txt  Jingxuan3_ETSon_Radius.txt  (+3 more)
ETS Test Environment Vol. 0.5/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Study-01/python-stimulation/: searchLimitedSpace.py
Study-02/ansys-Simulation/: VirtualOdorCondition.wbpj
Study-02/python-OSC-server/: RehaMove_PythonServer.py
Study-02/unity-DesktopVR/: MovementLog_35.txt
wearable-device/: IntranasalStimulator_Holder.f3d
wearable-device/Altium/: ETS_v8-nordic-split.PcbDoc  ETS_v8-nordic-split.PrjPcb  ETS_v8-nordic-split.SchDoc  ETS_v8-nordic-split_1-sided-HV.PcbDoc  ETS_v8-nordic-split_1-sided-LV.PcbDoc  ETS_v8-nordic-split_1-sided-panelized.PcbDoc  ETS_v8-nordic-split_1-sided.PcbDoc
(+53562 files in other folders)
